fix: typing on maplibre.astro so build can complete

--- a/src/components/fmtm/geojson-properties.astro
+++ b/src/components/fmtm/geojson-properties.astro
@@ -1,6 +1,6 @@
 <script>
   import '@hotosm/ui/dist/style.css';
-  import { Button } from '@hotosm/ui/dist/hotosm-ui';
+  import '@hotosm/ui/dist/hotosm-ui';
 
   const button = document.getElementById('geojsonProperties');
   button?.addEventListener('click', async () => {
